<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_data_group"
            android:title="@string/my_data_group">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/action_available_games"
                        android:icon="@drawable/ic_schedule"
                        android:title="@string/available_games"
                        android:visible="false" />
                    <item
                        android:id="@+id/action_stored_games"
                        android:icon="@drawable/ic_volleyball"
                        android:title="@string/completed_games" />
                    <item
                        android:id="@+id/action_stored_teams"
                        android:icon="@drawable/ic_teams"
                        android:title="@string/teams" />
                    <item
                        android:id="@+id/action_stored_rules"
                        android:icon="@drawable/ic_rules"
                        android:title="@string/rules" />
                    <item
                        android:id="@+id/action_colleagues"
                        android:icon="@drawable/ic_colleagues"
                        android:title="@string/colleagues"
                        android:visible="false" />
                </group>
            </menu>
        </item>

        <item
            android:id="@+id/configuration_group"
            android:title="@string/configuration_group">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/action_settings"
                        android:icon="@drawable/ic_settings"
                        android:title="@string/settings" />
                </group>
            </menu>
        </item>

        <item
            android:id="@+id/misc_group"
            android:title="@string/misc_tab">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/action_live_games_vbr_com"
                        android:icon="@drawable/ic_live"
                        android:title="@string/live_games_vbr_com" />
                    <item
                        android:id="@+id/action_credits"
                        android:icon="@drawable/ic_info"
                        android:title="@string/credit_title" />
                </group>
            </menu>
        </item>

    </group>
</menu>