<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_navigate_home"
        android:icon="@drawable/ic_home_menu"
        android:iconTint="@android:color/white"
        android:orderInCategory="1"
        android:title="@string/navigate_home"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_index_game"
        android:icon="@drawable/ic_public"
        android:iconTint="@android:color/white"
        android:orderInCategory="2"
        android:title="@string/index_game"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_menu"
        android:iconTint="@android:color/white"
        android:orderInCategory="3"
        android:title="@string/share"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_toss_coin"
        android:icon="@drawable/ic_coin_menu"
        android:iconTint="@android:color/white"
        android:orderInCategory="4"
        android:title="@string/toss_coin"
        app:showAsAction="always"/>
</menu>
