<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_purchase_menu"
        android:icon="@drawable/ic_purchase_menu"
        android:orderInCategory="1"
        android:title="@string/purchase"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/action_message_menu"
        android:icon="@drawable/ic_message_menu"
        android:orderInCategory="2"
        android:title="@string/app_name"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_resume_menu"
        android:contentDescription="@string/resume_game_title"
        android:icon="@drawable/ic_important_message_menu"
        android:orderInCategory="3"
        android:title="@string/resume_game_title"
        app:showAsAction="always"/>
</menu>