<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_index_game"
        android:icon="@drawable/ic_public_menu"
        android:iconTint="@android:color/white"
        android:orderInCategory="1"
        android:title="@string/index_game"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_generate_score_sheet"
        android:icon="@drawable/ic_report_menu"
        android:iconTint="@android:color/white"
        android:orderInCategory="2"
        android:title="@string/report_game"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_share_game"
        android:icon="@drawable/ic_share_menu"
        android:iconTint="@android:color/white"
        android:orderInCategory="3"
        android:title="@string/share"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_delete_game"
        android:icon="@drawable/ic_delete_menu"
        android:iconTint="@android:color/white"
        android:orderInCategory="4"
        android:title="@string/delete_game"
        app:showAsAction="always"/>
</menu>